# matrix-ai

./: .gitignore  BUILD_INFO.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf-space.yml
app/: bootstrap.py  deps.py  main.py  middleware.py  ui.py
app/core/: config.py  hub_client.py  logging.py  rate_limit.py  redact.py  schema.py
app/core/inference/: __init__.py  client.py  providers.py
app/core/prompts/: plan.txt
app/core/rag/: build.py  retriever.py
app/routers/: chat.py  health.py  plan.py
app/services/: chat_service.py  plan_service.py
app/templates/: base.html  chat.html  dev.html  home.html
configs/: .env.example  rag_sources.yaml  settings.yaml
data/: kb.jsonl
scripts/: build_kb.py  test_chain.py
tests/: test_multi_provider_chain.py  test_plan_service.py  test_providers.py
tests/utils/: gemini.py
